src/scss/themes/ng/body.scss
/* ... */
.cui-block-header {
	padding: $padding $padding 7px;

	&:empty {
		display: none;
	}
}

.cui-block-content {
	padding: 0 $padding $padding;

	&:empty {
		display: none;
	}

	.cui-form-table {
		width: 100%;
		margin: $padding 0;
	}

	.cui-block-header,
	.cui-block-content {
		padding-left: 0;
		padding-right: 0;
	}
}

// StickyHeader

.cui-sticky-header {
	padding: 5px $padding;
	font-size: 13px;
	font-weight: bold;
	color: $color;
	flex-basis: 100%;
	margin-top: $padding*2;
	border-top: 1px solid $soft-border;
	
	.cui-label {
		line-height: normal;
	}
}

.cui-sticky-header-control + .cui-sticky-header,
.cui-sticky-header:first-child,
.cui-block + .cui-sticky-header {
	margin-top: 0;
	border-top-width: 0;
}

.cui-sticky-header-control {
	position: fixed;
	overflow: hidden;

	top: 0;
	left: 0;
	right: 0;
	height: 0;
	z-index: 1;

	.cui-tmpl-sticky-header {
		margin: 0 0 1px; // one pixel bottom margin to make sure that the box-shadow doesn't get cut off when something gets measured
		position: absolute;
		left: 0;
		right: 0;
		font-weight: bold;
		background: hsla(0,0%,100%,.94);
		border-top: none;
		box-shadow: 0 1px transparentize(darken($soft-border, 50%), 0.85);
		
		&:not(:first-child) {
			margin-bottom: 0;
		}
	}
}

.cui-sticky-header-level-1,
.cui-sticky-header-level-2,
.cui-sticky-header-level-3,
.cui-sticky-header-level-4 {
	font-size: 11px;
}

.cui-sticky-header-level-0 {
	+ .cui-sticky-header-level-1 {
		margin-top: 0;
	}
}

// ProgressMeter
.cui-progress-meter {	
	.cui-progress-meter-bar {
		width: 100%;
		max-width: 200px;
		min-width: 30px;
		height: $button-height;
		line-height: $button-height;
		border-radius: $button-radius;
		overflow: hidden;
		position: relative;
		// to make sure that the border-radius will cut off all child backgrounds
		// http://stackoverflow.com/questions/5736503/how-to-make-css3-rounded-corners-hide-overflow-in-chrome-opera
		opacity: 0.9999;
		background: lighten(desaturate($highlight-color, 93%), 26%);
		color: white;

		.cui-progress-meter-fill {
			display: none;
			background: $highlight-color;
			position: absolute;
			left: 0;
			top: 0;
			width: 100%;
			height: 100%;
		}
		.cui-progress-meter-text {
			display: none;
			justify-content: center;
			position: relative;
		}
		.cui-progress-meter-icon {
			text-align: center;
			position: relative;
		}

	}
	&[state="waiting"] {
	}

	&[state="percent"] {
		.cui-progress-meter-icon {
			display: none;
		}
		.cui-progress-meter-text,
		.cui-progress-meter-fill {
			display: flex;
		}
	}
}

.cui-file-upload-drop-zone {
	position: relative;

	&.cui-file-upload-drag-over:after {
		content: '';
		pointer-events: none;
		display: block;
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		box-shadow: 0 0 0 2px $highlight-color inset;
		z-index: 1;
	}
}

// DigiDisplay

.cui-digi-display {
	// border: 1px solid black;
	align-self: flex-start;
	display: flex;

	> div {
		vertical-align: bottom;
		height: 20px;
		// border-right: 1px solid #c0c0c0;
		&:last-child {
			border-right: 0;
		}
		text-align: center;
		overflow: hidden;
		padding: 1px;
		font-family: monospace;
		font-size: 16px;
		line-height: 18px;
	}

	.cui-digi-display-digit {
		transition: margin-top 0.3s ease;
		height: 18px;
	}

	.cui-digi-display-static {
		height: 20px;
	}
}

// Autocomplete
.cui-tmpl-autocompletion-popup {
	flex: 1 1 auto;
	overflow: auto;
	-webkit-overflow-scrolling: touch;
}

.cui-autocompletion-popup {
	min-height: 0;
}

.cui-autocompletion-popup-container {
	padding: 4px 0;

	&:empty {
		display: none;

		+ .cui-autocompletion-popup-container.container-status {
			border-top: none;
		}
	}

	&.container-status {
		padding: 4px $padding 7px;
		background: $toolbar-background;
		border-top: 1px solid $soft-border;

		.cui-label {
			color: $muted-color;
			cursor: default;
			font-size: 11px;
			line-height: 14px;

			& + .cui-button {
				display: block;
				padding: 7px 0 0;
				height: auto;
			}
		}
	}
}

.cui-autocompletion-popup-item {
	padding: 3px $padding;
	cursor: pointer;
	color: hsl(205,7%,22%);
	outline: none;

	&:hover,
	&:focus {
		background: hsl(205,17%,98%);
	}

	em {
		font-weight: bold;
		font-style: normal;
	}

	.cui-label {
		max-width: 100%;
	}

	.cui-label-content {
		flex-shrink: 1;
	}
}

// Space
.cui-space {
	margin: $padding;
	display: inline-block;

	&:empty {
		margin: $padding/2;
	}
}

.cui-small-space {
	margin: $padding/2;
	display: inline-block;

	&:empty {
		margin: $padding/4;
	}
}

.cui-large-space {
	margin: $padding*2;
	display: inline-block;

	&:empty {
		margin: $padding;
	}
}

.cui-flexible-space {
	flex: 1 1 auto;
}

// Console
.cui-console {
	padding: $padding;
	font-family: monospace;

	.cui-label-multiline {
		margin: 0;
	}

	.cui-label:not(:last-child) {
		border-bottom: 1px solid hsl(0,0%,94%);
	}
}

.cui-disabled {
	-webkit-user-select: none;
	    -ms-user-select: none;
	        user-select: none;
	opacity: 0.33;
	pointer-events: none;
}

// CUI technical stuff
.cui-tmpl,
[data-template] {
	// hide all templates
	display: none !important;
}

@keyframes nodeInserted {
	from { opacity: 0.99; }
	to { opacity: 1; }
}

.cui-template-empty {
	&.cui-label {
		display: none !important;
	}
}

[hidden] {
	display: none !important;
}

